--- a/CookPopularControl/Themes/DefaultPopularControl.xaml
+++ b/CookPopularControl/Themes/DefaultPopularControl.xaml
@@ -10,7 +10,8 @@
                     xmlns:qrCode="clr-namespace:CookPopularControl.Controls.QRCode"
                     xmlns:menu="clr-namespace:CookPopularControl.Controls.Menus"
                     xmlns:swiper="clr-namespace:CookPopularControl.Controls.Swiper"
-                    xmlns:carousel="clr-namespace:CookPopularControl.Controls.CarouselView">
+                    xmlns:carousel="clr-namespace:CookPopularControl.Controls.CarouselView"
+                    xmlns:player="clr-namespace:CookPopularControl.Controls.MediaPlayer">
 
     <ResourceDictionary.MergedDictionaries>
         <!--Original Control-->
@@ -48,6 +49,7 @@
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/QRCodeControlStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/SwiperStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/CarouselViewStyle.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/MediaPlayerStyle.xaml" />
 
         <!--Other Resource Dictionaries-->
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/GeometryFigure.xaml"/>
@@ -105,5 +107,6 @@
     <Style x:Key="{x:Type menu:CircleMenu}" TargetType="{x:Type menu:CircleMenu}" BasedOn="{StaticResource CircleMenuStyle}"/>
     <Style x:Key="{x:Type swiper:Swiper}" TargetType="{x:Type swiper:Swiper}" BasedOn="{StaticResource DefaultSwiperStyle}"/>
     <Style x:Key="{x:Type carousel:CarouselView}" TargetType="{x:Type carousel:CarouselView}" BasedOn="{StaticResource DefaultCarouselViewStyle}"/>
+    <Style x:Key="{x:Type player:MediaPlayer}" TargetType="{x:Type player:MediaPlayer}" BasedOn="{StaticResource DefaultMediaPlayerStyle}"/>
 
 </ResourceDictionary>
