--- a/TestDemo/Demos/MenuDemo.xaml
+++ b/TestDemo/Demos/MenuDemo.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <UserControl.Resources>
-        <Style x:Key="DemoButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource IconButtonStyle}">
+        <Style x:Key="DemoButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonIconStyle}">
             <Setter Property="Width" Value="50" />
             <Setter Property="Height" Value="50" />
             <Setter Property="pc:FrameworkElementBaseAttached.CornerRadius" Value="40" />
