--- a/TestDemo/Demos/NotifyIconDemo.xaml
+++ b/TestDemo/Demos/NotifyIconDemo.xaml
@@ -9,25 +9,35 @@
              mc:Ignorable="d" x:Name="NotifyIcon"
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <pc:TaskbarIcon x:Name="DefaultNotifyIcon" Visibility="Visible"
-                    ToolTipText="CookPopularControl" 
-                    IconSource="../Resources/Gif/CookCSharp.ico"
-                    ContextMenu="{StaticResource NotifyIconContextMenu}"
-                    MenuActivation="RightClick"
-                    LeftClickCommand="{x:Static pc:TaskbarIcon.OpenApplicationCommand}"
-                    PopupActivation="DoubleClick">
-        <pc:TaskbarIcon.TrayPopup>
-            <Border Width="300" Height="100" Background="DodgerBlue">
-                <TextBlock Text="Welcome To CookPopularControl" FontSize="18" FontWeight="DemiBold" Foreground="White"
+    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+        <pc:TaskbarIcon x:Name="DefaultNotifyIcon" Visibility="Visible"
+                        IsStartTaskbarFlash="True"
+                        ToolTipText="CookPopularControl" 
+                        IconSource="../Resources/Gif/CookCSharp.ico"
+                        ContextMenu="{StaticResource NotifyIconContextMenu}"
+                        MenuActivation="RightClick"
+                        LeftClickCommand="{x:Static pc:TaskbarIcon.OpenApplicationCommand}"
+                        PopupActivation="DoubleClick">
+            <pc:TaskbarIcon.TrayPopup>
+                <Border Width="300" Height="100" Background="DodgerBlue">
+                    <TextBlock Text="Welcome To CookPopularControl" FontSize="18" FontWeight="DemiBold" Foreground="White"
                            VerticalAlignment="Center" HorizontalAlignment="Center"/>
-            </Border>
-        </pc:TaskbarIcon.TrayPopup>
-        <pc:TaskbarIcon.TrayToolTip>
-            <Border Background="Red">
-                <TextBlock Text="CookPopularControl" FontSize="18" FontWeight="DemiBold" Foreground="White"
+                </Border>
+            </pc:TaskbarIcon.TrayPopup>
+            <pc:TaskbarIcon.TrayToolTip>
+                <Border Background="Red">
+                    <TextBlock Text="CookPopularControl" FontSize="18" FontWeight="DemiBold" Foreground="White"
                            VerticalAlignment="Center" HorizontalAlignment="Center"/>
-            </Border>
-        </pc:TaskbarIcon.TrayToolTip>
-    </pc:TaskbarIcon>
+                </Border>
+            </pc:TaskbarIcon.TrayToolTip>
+        </pc:TaskbarIcon>
+
+        <WrapPanel>
+            <TextBlock Text="开启系统托盘菜单闪烁" VerticalAlignment="Center" Foreground="Red" FontSize="16" FontWeight="DemiBold"/>
+            <pc:SwitchControl Width="100" Height="35" Margin="10,0"
+                                  Background="Red" SwicthCloseBackground="LightBlue"
+                                  Click="Button_Click_2" Style="{StaticResource DefaultSwitchControlStyle}"/>
+        </WrapPanel>
+    </StackPanel>
 
 </UserControl>
